# Dirtybird-Rust-Miner

./: .gitattributes  .gitignore  BENCHMARKS.md  BUILDING-LTO.md  Cargo.toml  README.md  SECURITY.md  build.rs  dirtybird_bench.ps1  headtohead.ps1  script.sh  start.bat  sweep.ps1
.cargo/: config.toml.example
.github/actions/setup/: action.yml
.github/workflows/: benchmarks.yml  ci.yml  release.yml  security.yml
_pgo/: dual.profdata
astrobwt/: Cargo.toml  build.rs
astrobwt/examples/: dump_failcase.rs  kat.rs  pgo_train.rs  profile.rs  sa_bench.rs  throughput.rs
astrobwt/src/: difficulty.rs  hashes.rs  lib.rs  lpbuf.rs  ops_generated.rs  pow16.rs  rc4.rs  sais16.rs  sais32.rs  suffixarray.rs
astrobwt/tests/: full_vectors.rs  pow16_vectors.rs  prologue_vectors.rs  sais_perf.rs  sais_vectors.rs
block/: Cargo.toml
block/src/: address.rs  arguments.rs  bech32.rs  block.rs  lib.rs  miniblock.rs  transaction.rs  varint.rs
block/tests/: argdecode_vectors.rs  block_vectors.rs  iaddress_vectors.rs  miniblockhash_vectors.rs  proofnonce_vectors.rs  scdata_vectors.rs  scdataft_vectors.rs  vectors.rs
config/: h-manifest.conf  h-run.sh  h-stats.sh
cryptography/bn256/: Cargo.toml
cryptography/bn256/src/: consts.rs  curve.rs  g1.rs  gfp.rs  lib.rs
cryptography/bn256/tests/: vectors.rs
cryptography/crypto/: Cargo.toml
cryptography/crypto/examples/: gen_proof.rs
cryptography/crypto/src/: balance_decoder.rs  cipher.rs  elgamal.rs  field_vector.rs  generators.rs  hashtopoint.rs  inner_product.rs  keccak.rs  keys.rs  lib.rs  point_vector.rs  polynomial.rs  proof.rs  read.rs  scalar.rs  statement.rs
cryptography/crypto/tests/: algebra_vectors.rs  innerproduct_vectors.rs  nonbalance_vectors.rs  polynomial_vectors.rs  proof_rings.rs  proof_vectors.rs  proof_verify.rs  statement_vectors.rs  vectors.rs
scripts/: release.sh
src/: affinity.rs  bench.rs  codelut.rs  config.rs  difficulty.rs  job.rs  lib.rs  main.rs  mining.rs  net.rs  pipeline.rs  primitives.rs  sa.rs  sha_hw.rs  state.rs  sustained.rs  sys.rs  term.rs  tls.rs  wolf.rs  worker.rs  ws.rs
vectors/: minerwork.json
