[package]
name = "dero-astrobwt"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AstroBWTv3 proof-of-work hash (DERO HE STARGATE) — port of astrobwt/astrobwtv3."

[features]
# Pure-Rust sais32 stays the DEFAULT so wasm / no-C-toolchain builds are untouched.
default = []
# Opt-in: route AstroBWTv3's suffix-array step through the C library libsais.
# Enabled only by the (fail-safe) miner; verification paths stay on pure Rust.
libsais = ["dep:libsais-sys"]
# Opt-in: Dirtybird v1.14 descriptor suffix-array backend for mining. The
# backend falls back to libsais if descriptor construction refuses an input.
v114 = ["libsais"]
# Opt-in: per-stage rdtsc instrumentation (measurement only). Adds a separate
# profiled pipeline; the production hot path is untouched.
profiling = []

[dependencies]
sha2 = "0.10"
sha3.workspace = true
salsa20 = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
siphasher = "1"
num-bigint = { workspace = true }
num-traits = { workspace = true }
# default-features = false drops the crate's default `openmp` feature (and the
# openmp-sys system dependency): the miner already parallelizes across nonces.
libsais-sys = { version = "0.2", default-features = false, optional = true }

[build-dependencies]
cc = "1"

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
sha3.workspace = true
salsa20 = "0.10"
