[package]
name = "dero-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DERO HE cryptography: Keccak, hash-to-point, generators, scalar, ElGamal, Pedersen, Bulletproofs, Zether proofs — port of cryptography/crypto."

[dependencies]
dero-bn256 = { path = "../bn256" }
num-bigint.workspace = true
num-integer.workspace = true
num-traits.workspace = true
sha3.workspace = true
hex.workspace = true
thiserror.workspace = true
blake2 = "0.10"
chacha20 = "0.9"

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
